oc/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-frontend
  labels:
    app: counter-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-frontend
  template:
    metadata:
      labels:
        app: counter-frontend
    spec:
      containers:
      - name: counter-frontend
        image: counter-frontend:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
