oc/deployment-pgadmin.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: counter-pgadmin
  labels:
    app: counter-pgadmin
    app.kubernetes.io/part-of: counter-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-pgadmin
  template:
    metadata:
      labels:
        app: counter-pgadmin
    spec:
      containers:
      - name: counter-pgadmin
        image: ghcr.io/modul-i-ch-109/pgadmin4:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80 
          protocol: TCP
        resources: {}
