oc/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: counter-database
  labels:
    app: counter-app
    app.kubernetes.io/part-of: counter-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-app
  template:
    metadata:
      labels:
        app: counter-app
    spec:
      containers:
      - name: counter-database
      image: registry.redhat.io/rhel8/postgresql-15:latest
      imagePullPolicy: Always
