oc/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-backend
  labels:
    app: nodejs-backend
spec:
  selector:
    app: nodejs-backend 
  ports:
    - protocol: TCP
      port: 3000  
      targetPort: 3000
  type: ClusterIP
