oc/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-frontend
  labels:
    app: counter-frontend
spec:
  selector:
    app: counter-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
