oc/service-pgadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-pgadmin
  labels:
    app: counter-pgadmin
spec:
  selector:
    app: counter-pgadmin
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 80
  type: ClusterIP
