oc/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: counter-database
  labels:
    app: counter-app
    app.kubernetes.io/part-of: counter-app
spec:
  selector:
    app: counter-app
  ports:
      protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
