oc/route-backend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: counter-backend
spec:
  host: counter-backend.example.com  
  to:
    kind: Service
    name: counter-backend  
  port:
    targetPort: 3000  
  tls:
    termination: edge
