oc/route-frontend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: counter-frontend
spec:
  host: counter-frontend.example.com
  to:
    kind: Service
    name: counter-frontend
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
