oc/route-pgadmin.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: counter-pgadmin
spec:
  host: pgadmin.example.com  
  to:
    kind: Service
    name: counter-pgadmin   
  port:
    targetPort: 5050  
  tls:
    termination: edge 
    InsecureEdgeTerminationPolicy: Redirect
